fix spacing and sizing for banner and about

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -1,5 +1,5 @@
 .about {
-  margin: 48px auto;
+  margin: 64px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
