--- a/src/Styles/Banner.scss
+++ b/src/Styles/Banner.scss
@@ -1,9 +1,10 @@
 .banner {
   width: 100%;
+  height: 164px;
 }
 
 .banner-img {
   object-fit: cover;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
